karpenter-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web

---
apiVersion: v1
kind: Namespace
metadata:
  name: api
