karpenter-test/admin-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: web
  labels:
    app: web-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-admin
  template:
    metadata:
      labels:
        app: web-admin
    spec:
      containers:
      - name: nginx
        image: prakhar0819/my-nginx:prakhar
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: web
spec:
  selector:
    app: web-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
