karpenter-test/web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: web
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      nodeSelector:
        intent: apps  
        karpenter.sh/provisioner-name: web-provisioner
       
      containers:
      - name: nginx
        image: prakhar0819/my-nginx:website
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"


---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
